# i3x

./: Cargo.toml  README.md  dfx.json
src/i3x/: Cargo.toml
src/i3x/src/: commands.rs  i3m_project.rs  integration_tests.rs  main.rs  package_manager.rs  registry.rs  utils.rs
