[package]
name = "i3x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "i3x"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
async-std = "1.13.0"
candid = "0.10"
getrandom = { version = "0.2.15", features = ["js"] }
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
ic-types = "0.7.0"
ic-utils = "0.39.0"
serde = { version = "1.0.213", features = ["derive"] }
structopt = "0.3.26"

[build-dependencies]
ic-cdk = "0.16"
